# pingpals

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  REQUIREMENTS.md  REQUIREMENT_TEMPLATE.md  SECURITY.md  TESTING.md
api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.lock.txt  requirements.in  requirements.lock.txt
api/src/pingpals_api/: __init__.py  app.py  authz.py  config.py  consent.py  csrf.py  errors.py  http_boundary.py  internal_authn.py  limits.py  rate_limit.py  validation.py
api/src/pingpals_api/audit/: __init__.py  log.py  sink.py
api/src/pingpals_api/auth/: __init__.py  account_linking.py  idtoken.py  oauth_adapter.py  oidc.py  session.py  webauthn.py
api/src/pingpals_api/blueprints/: __init__.py  health.py
api/src/pingpals_api/contacts/: __init__.py  cadence.py  categories.py  google_people.py  last_contact.py  quotas.py  service.py
api/src/pingpals_api/delivery/: __init__.py  email_adapter.py  email_authentication.py  endpoints.py  payload.py  preferences.py  retry.py  web_push.py  webhooks.py  worker.py
api/src/pingpals_api/integrations/: __init__.py
api/src/pingpals_api/outreach/: __init__.py  links.py
api/src/pingpals_api/persistence/: __init__.py  entities.py  repository.py  secure_store.py
api/src/pingpals_api/privacy/: __init__.py  consent_store.py  defaults.py  dsr.py  (+4 more)
api/tests/: test_account_linking.py  test_app_factory.py  test_audit_log.py  test_authz.py  test_cadence.py  test_consent.py  test_contacts_service.py  test_crypto_agility.py  test_delivery_channels.py  test_delivery_core.py  test_engine_suite.py  test_google_people_import.py  test_http_boundary.py  test_idtoken.py  test_integration_app.py  test_internal_authn.py  test_last_contact.py  test_oauth_adapter.py  test_oidc_initiation.py  test_outreach_links.py  test_privacy_consent_export.py  test_privacy_erasure_dsr.py  test_privacy_suite.py  test_rate_limit.py  test_reminder_actions.py  test_repository.py  test_request_guards.py  test_scaffolding.py  test_scheduler.py  test_secure_store.py  test_security_suite.py  test_session.py  test_validation.py  test_webauthn.py
(+127 files in other folders)
